--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,12 @@
 *~
 
 Makefile
+autom4te.cache/output.0
+autom4te.cache/requests
+autom4te.cache/traces.0
+autom4te.cache
+config.h
+config.h.in
+config.log
+config.status
+configure
