Added support for automake and autoconf.

--- a/configure.ac
+++ b/configure.ac
@@ -3,16 +3,21 @@
 
 AC_PREREQ([2.69])
 AC_INIT([hotbodies], [0.1], [BUG-REPORT-ADDRESS])
+AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([src/main.cpp])
 AC_CONFIG_HEADERS([config.h])
 
 # Checks for programs.
 AC_PROG_CXX
+AC_PROG_CC
+AC_PROG_INSTALL
 
 # Checks for libraries.
 
 # Checks for header files.
+AC_HEADER_STDC
 AC_CHECK_HEADERS([stdint.h])
+AC_TYPE_INT32_T
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_TYPE_SIZE_T
