--- a/configure.ac
+++ b/configure.ac
@@ -3,6 +3,8 @@
 
 AC_PREREQ([2.69])
 AC_INIT([hotbodies], [0.1], [BUG-REPORT-ADDRESS])
+#LT_INIT
+AC_CONFIG_AUX_DIR([.])
 AM_INIT_AUTOMAKE([-Wall -Werror])
 AC_CONFIG_SRCDIR([src/main.cpp])
 AC_CONFIG_HEADERS([config.h])
@@ -20,7 +22,13 @@ AC_PROG_INSTALL
 AC_HEADER_STDC
 AC_CHECK_HEADERS([stdint.h])
 AC_TYPE_INT32_T
-AC_SEARCH_LIBS([pthread_create], [pthread])
+AC_PROG_MAKE_SET
+AC_SEARCH_LIBS([pthread_create], [pthread], [have_pthreads=yes])
+
+if test "x${have_pthreads}" = xyes; then
+  AC_CHECK_HEADERS([pthread.h], [],
+    [have_pthreads=no])
+fi
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_TYPE_SIZE_T
@@ -30,6 +38,6 @@ AC_TYPE_SIZE_T
 AC_CONFIG_FILES([Makefile
                  src/Makefile
                  test/Makefile])
-#AC_CONFIG_SUBDIRS([test/gtest-1.7.0])
+AC_CONFIG_SUBDIRS([test/gtest-1.7.0])
 
 AC_OUTPUT
