--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,16 +1,8 @@
+SUBDIRS = gtest-1.7.0
 TESTS = test
 check_PROGRAMS = test
 test_SOURCES = main.cpp
-test_LDADD = gtest-1.7.0/libgtest.a gtest-1.7.0/libgtest_main.a $(LIBS)
-test_CPPFLAGS = -I$(srcdir)/gtest-1.7.0/include -I$(srcdir)/gtest-1.7.0
+test_LDADD = gtest-1.7.0/lib/libgtest.la gtest-1.7.0/lib/libgtest_main.la $(LIBS)
+test_CPPFLAGS = -I$(top_srcdir)/test/gtest-1.7.0/include -I$(top_srcdir)/test/gtest-1.7.0
 
-#check_LTLIBRARIES= gtest-1.7.0/libgtest.a gtest-1.7.0/libgtest_main.a
-
-gtest-1.7.0/libgtest.a:
-	build-gtest
-gtest-1.7.0/libgtest_main.a:
-	build-gtest
-
-build-gtest:
-	cmake ./gtest-1.7.0
-	make -C ./gtest-1.7.0
+#check_LTLIBRARIES= gtest-1.7.0/lib/libgtest.la gtest-1.7.0/lib/libgtest_main.la
