--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,3 @@
 bin_PROGRAMS = hotbodies
 hotbodies_SOURCES = main.cpp DoubleTextParser.cpp  DoubleTextParserFactory.cpp DoubleTextParserFactory.hpp DoubleTextParser.hpp ImageAlgorithm.hpp Matrix.hpp ParserFactory.hpp Parser.hpp SortImageAlgorithm.hpp
-hotbodies_CXXFLAGS = -std=c++0x
+hotbodies_CXXFLAGS = -std=c++0x -Wall -Wextra
